build/project/loki_grafana_1_f8bde8b65a4e/.argocd/service.yml

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: loki_grafana_1_f8bde8b65a4e
  name: loki_grafana_1_f8bde8b65a4e
  namespace: default

spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: loki_grafana_1_f8bde8b65a4e
